--- a/docs/docs/latex/index.tex
+++ b/docs/docs/latex/index.tex
@@ -12,7 +12,7 @@
 
 
 
-\href{https://mrsinho.github.io/shvulkan-docs/md__c_1_2__home_2desktop_2github_2shvulkan_2docs_2src_2build.html}{\texttt{ }}
+\href{https://mrsinho.github.io/shvulkan-docs/index.html}{\texttt{ }}
 
 {\ttfamily shvulkan} is a lightweight and flexible wrapper around the Vulkan® API written completely in C, that makes it easier to work with graphics efficiently without writing thousands of lines of code.
 
