--- a/docs/docs/latex/index.tex
+++ b/docs/docs/latex/index.tex
@@ -39,9 +39,9 @@
 The examples are frequently being tested on {\bfseries{Windows 11}}, {\bfseries{Nix\+OS}} (with Nix flake), {\bfseries{Linux Mint}} (virtual machine and pc) with different compilers ({\bfseries{MSVC}}, {\bfseries{gcc}}), hardware configurations (RX580 4GB GDDR5, Radeon V Carrizo 500MB) and windowing systems ({\bfseries{Win32}}, {\bfseries{X11}}, {\bfseries{Wayland}}).\hypertarget{index_autotoc_md3}{}\doxysection{\texorpdfstring{Clone and Build}{Clone and Build}}\label{index_autotoc_md3}
 Open the terminal and run the following commands\+:
 
- 
 
-Tested on Win32 and X11.
+
+Be sure to have installed the official \href{https://www.lunarg.com/vulkan-sdk/}{\texttt{Vulkan® SDK}} from LunarG, then run the following commands\+:
 
 
 \begin{DoxyCode}{0}
@@ -51,6 +51,45 @@ Tested on Win32 and X11.
 \DoxyCodeLine{cd\ build}
 \DoxyCodeLine{cmake\ -\/DSH\_VULKAN\_BUILD\_EXAMPLES=ON\ ..}
 \DoxyCodeLine{cmake\ -\/-\/build\ .}
+\DoxyCodeLine{}
+\DoxyCodeLine{cd\ bin/examples}
+\DoxyCodeLine{}
+\DoxyCodeLine{start\ shvulkan-\/clear-\/color}
+\DoxyCodeLine{start\ shvulkan-\/scene}
+\DoxyCodeLine{start\ shvulkan-\/compute-\/power-\/numbers}
+
+\end{DoxyCode}
+
+
+
+
+On Debian and similar distribution before building the project you first need to install some packages\+:
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{sudo\ add-\/apt-\/repository\ -\/y\ ppa:oibaf/graphics-\/drivers}
+\DoxyCodeLine{sudo\ apt\ update\ -\/y}
+\DoxyCodeLine{}
+\DoxyCodeLine{sudo\ apt\ install\ -\/yy\ libvulkan-\/dev\ libvulkan1\ vulkan-\/utils\ mesa-\/vulkan-\/drivers}
+\DoxyCodeLine{sudo\ apt\ install\ -\/yy\ libxrandr-\/dev\ libxinerama-\/dev\ libxcursor-\/dev\ libxi-\/dev}
+
+\end{DoxyCode}
+
+
+Now run these commands to build\+:
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{git\ clone\ -\/-\/recursive\ https://github.com/mrsinho/shvulkan.git}
+\DoxyCodeLine{cd\ shvulkan}
+\DoxyCodeLine{mkdir\ build}
+\DoxyCodeLine{cd\ build}
+\DoxyCodeLine{cmake\ -\/DSH\_VULKAN\_BUILD\_EXAMPLES=ON\ ..}
+\DoxyCodeLine{cmake\ -\/-\/build\ .}
+\DoxyCodeLine{}
+\DoxyCodeLine{cd\ bin/examples}
+\DoxyCodeLine{}
+\DoxyCodeLine{./shvulkan-\/clear-\/color\ \&\ ./shvulkan-\/scene\ \&\ ./shvulkan-\/compute-\/power-\/numbers}
 
 \end{DoxyCode}
 
